--- a/app/index.html
+++ b/app/index.html
@@ -1,68 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0b1220" />
   <title>RControl Factory</title>
 
-  <link rel="manifest" href="manifest.json">
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #0f172a;
-      color: #e5e7eb;
-    }
-    header {
-      background: #020617;
-      padding: 16px;
-      text-align: center;
-      font-weight: bold;
-      font-size: 18px;
-    }
-    main {
-      padding: 20px;
-    }
-    button {
-      width: 100%;
-      padding: 14px;
-      margin-top: 12px;
-      background: #22c55e;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    button.secondary {
-      background: #2563eb;
-    }
-    .card {
-      background: #020617;
-      padding: 16px;
-      border-radius: 10px;
-      margin-bottom: 16px;
-    }
-  </style>
+  <link rel="manifest" href="./manifest.json" />
+  <link rel="stylesheet" href="./css/app.css" />
 </head>
-
 <body>
-  <header>RControl Factory</header>
-
-  <main>
-    <div class="card">
-      <h2>Bem-vindo 👋</h2>
-      <p>Factory interna para criar aplicativos da RControl.</p>
+  <header class="topbar">
+    <div class="brand">
+      <span class="dot"></span>
+      <div>
+        <div class="brand-title">RControl Factory</div>
+        <div class="brand-sub">App creator (PWA)</div>
+      </div>
     </div>
 
-    <button onclick="alert('Criar projeto (fake IA)')">
-      ➕ Criar novo app
-    </button>
+    <nav class="tabs">
+      <button class="tab" data-route="dashboard">Dashboard</button>
+      <button class="tab" data-route="newapp">New App</button>
+      <button class="tab" data-route="generator">Generator</button>
+      <button class="tab" data-route="settings">Settings</button>
+    </nav>
+  </header>
 
-    <button class="secondary" onclick="alert('Gerar app (modo fake)')">
-      ⚙️ Gerar app
-    </button>
-  </main>
+  <main id="app" class="container"></main>
+
+  <footer class="footer">
+    <span id="status">Offline-first • Local mode</span>
+  </footer>
+
+  <script src="./js/templates.js"></script>
+  <script src="./js/router.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
