--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <title>RControl Factory</title>
 
   <link rel="manifest" href="./manifest.json" />
-  <link rel="stylesheet" href="./CSS/app.css" />
+  <link rel="stylesheet" href="./css/app.css" />
 </head>
 <body>
   <header class="topbar">
