--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./css/app.css" />
 </head>
+
 <body>
   <header class="topbar">
     <div class="brand">
@@ -20,7 +21,7 @@
     </div>
 
     <nav class="tabs">
-      <button class="tab" data-route="dashboard">Dashboard</button>
+      <button class="tab" data-route="home">Dashboard</button>
       <button class="tab" data-route="newapp">New App</button>
       <button class="tab" data-route="generator">Generator</button>
       <button class="tab" data-route="settings">Settings</button>
@@ -33,34 +34,6 @@
     <span id="status">Offline-first • Local mode</span>
   </footer>
 
-  <script src="./js/templates.js"></script>
-  <script src="./js/router.js"></script>
-  <script src="./js/app.js"></script>
-</body>
-</html>
-      <span class="dot"></span>
-      <div>
-        <div class="brand-title">RControl Factory</div>
-        <div class="brand-sub">App creator (PWA)</div>
-      </div>
-    </div>
-
-    <nav class="tabs">
-      <button class="tab" data-route="dashboard">Dashboard</button>
-      <button class="tab" data-route="newapp">New App</button>
-      <button class="tab" data-route="generator">Generator</button>
-      <button class="tab" data-route="settings">Settings</button>
-    </nav>
-  </header>
-
-  <main id="app" class="container"></main>
-
-  <footer class="footer">
-    <span id="status">Offline-first • Local mode</span>
-  </footer>
-
-  <script src="./js/templates.js"></script>
-  <script src="./js/router.js"></script>
-  <script src="./js/app.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
