--- a/app/index.html
+++ b/app/index.html
@@ -1,39 +1,2 @@
 <!doctype html>
-<html lang="pt-br">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#0b1220" />
-  <title>RControl Factory</title>
-
-  <link rel="manifest" href="./manifest.json" />
-  <link rel="stylesheet" href="./css/app.css" />
-</head>
-
-<body>
-  <header class="topbar">
-    <div class="brand">
-      <span class="dot"></span>
-      <div>
-        <div class="brand-title">RControl Factory</div>
-        <div class="brand-sub">App creator (PWA)</div>
-      </div>
-    </div>
-
-    <nav class="tabs">
-      <button class="tab" data-route="home">Dashboard</button>
-      <button class="tab" data-route="newapp">New App</button>
-      <button class="tab" data-route="generator">Generator</button>
-      <button class="tab" data-route="settings">Settings</button>
-    </nav>
-  </header>
-
-  <main id="app" class="container"></main>
-
-  <footer class="footer">
-    <span id="status">Offline-first • Local mode</span>
-  </footer>
-
-  <script type="module" src="./js/app.js"></script>
-</body>
-</html>
+<html
