--- a/app/index.html
+++ b/app/index.html
@@ -1,47 +1,220 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#0b1220" />
   <title>RControl Factory</title>
-
-  <link rel="manifest" href="./manifest.json" />
-  <link rel="stylesheet" href="./css/app.css" />
+  <meta name="theme-color" content="#0b1220" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
   <header class="topbar">
     <div class="brand">
       <span class="dot"></span>
       <div>
-        <div class="brand-title">RControl Factory</div>
-        <div class="brand-sub">App creator (PWA)</div>
+        <div class="title">RControl Factory</div>
+        <div class="subtitle">App creator (PWA) • Offline-first</div>
       </div>
     </div>
 
-    <nav class="tabs">
-      <button class="tab" data-route="home">Dashboard</button>
-      <button class="tab" data-route="newapp">New App</button>
-      <button class="tab" data-route="generator">Generator</button>
-      <button class="tab" data-route="settings">Settings</button>
+    <nav class="tabs" id="tabs">
+      <button class="tab active" data-tab="dashboard">Dashboard</button>
+      <button class="tab" data-tab="newapp">New App</button>
+      <button class="tab" data-tab="editor">Editor</button>
+      <button class="tab" data-tab="generator">Generator</button>
+      <button class="tab" data-tab="settings">Settings</button>
     </nav>
   </header>
 
-  <main id="app" class="container"></main>
+  <main class="container">
+    <!-- DASHBOARD -->
+    <section class="panel" id="tab-dashboard">
+      <h2>Bem-vindo 👋</h2>
+      <p class="muted">Factory interna para criar e publicar apps da RControl (PWA).</p>
 
-  <footer class="footer">
-    <span id="status">Offline-first • Local mode</span>
-  </footer>
+      <div class="row">
+        <button class="btn primary" id="goNewApp">+ Criar novo app</button>
+        <button class="btn" id="goEditor">✍️ Abrir Editor</button>
+        <button class="btn" id="goGenerator">🚀 Gerar/ZIP/Publish</button>
+      </div>
 
-  <!-- Templates e router -->
-  <script type="module" src="./js/templates.js"></script>
-  <script type="module" src="./js/router.js"></script>
+      <div class="card">
+        <h3>Apps salvos</h3>
+        <div id="appsList" class="list"></div>
+        <div class="muted small">Dica: toque em um app para selecionar como “ativo”.</div>
+      </div>
 
-  <!-- Motor do ZIP (JSZip) -->
+      <div class="card">
+        <h3>Status</h3>
+        <div id="statusBox" class="status">Pronto ✅</div>
+      </div>
+    </section>
+
+    <!-- NEW APP -->
+    <section class="panel hidden" id="tab-newapp">
+      <h2>Criar novo app</h2>
+      <p class="muted">Cria a estrutura inicial e salva localmente. Depois você edita e publica.</p>
+
+      <div class="grid2">
+        <label class="field">
+          <span>Nome do app</span>
+          <input id="newName" placeholder="Ex: R Quotas" />
+        </label>
+
+        <label class="field">
+          <span>ID do app (sem espaço, minúsculo)</span>
+          <input id="newId" placeholder="Ex: rquotas" />
+          <span class="hint">Sem letras maiúsculas. Só a-z, 0-9 e hífen.</span>
+        </label>
+
+        <label class="field">
+          <span>Tipo</span>
+          <select id="newType">
+            <option value="pwa">PWA</option>
+          </select>
+        </label>
+
+        <label class="field">
+          <span>Template</span>
+          <select id="newTemplate"></select>
+          <span class="hint">Comece com “PWA Base (com app.js + styles.css)”.</span>
+        </label>
+      </div>
+
+      <div class="row">
+        <button class="btn primary" id="createAppBtn">Salvar</button>
+        <button class="btn" id="cancelNew">Voltar</button>
+      </div>
+
+      <div class="card">
+        <h3>Validação</h3>
+        <pre class="pre" id="newAppValidation">—</pre>
+      </div>
+    </section>
+
+    <!-- EDITOR -->
+    <section class="panel hidden" id="tab-editor">
+      <h2>Editor</h2>
+      <p class="muted">Edite os arquivos do app ativo e veja o preview.</p>
+
+      <div class="card">
+        <div class="row wrap">
+          <div class="pill">
+            <span class="muted small">App ativo:</span>
+            <strong id="activeAppLabel">—</strong>
+          </div>
+
+          <button class="btn" id="openPreviewBtn">👁️ Preview</button>
+          <button class="btn" id="saveFileBtn">💾 Salvar arquivo</button>
+          <button class="btn danger" id="resetFileBtn">↩️ Reset arquivo</button>
+        </div>
+
+        <div class="editorLayout">
+          <div class="files">
+            <div class="filesHeader">Arquivos</div>
+            <div id="filesList" class="filesList"></div>
+          </div>
+
+          <div class="code">
+            <div class="codeHeader">
+              <div class="muted small" id="currentFileLabel">—</div>
+            </div>
+            <textarea id="codeArea" spellcheck="false"></textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Preview</h3>
+        <div class="muted small">Se der cache, force refresh (Safari: recarregar) ou apague o PWA e instale de novo.</div>
+        <div class="previewBox">
+          <iframe id="previewFrame" title="Preview"></iframe>
+        </div>
+      </div>
+    </section>
+
+    <!-- GENERATOR -->
+    <section class="panel hidden" id="tab-generator">
+      <h2>Generator</h2>
+      <p class="muted">Baixe ZIP ou publique no GitHub Pages para obter link de teste.</p>
+
+      <div class="card">
+        <label class="field">
+          <span>App salvo</span>
+          <select id="genAppSelect"></select>
+        </label>
+
+        <div class="row wrap">
+          <button class="btn primary" id="downloadZipBtn">⬇️ Baixar ZIP</button>
+          <button class="btn" id="publishBtn">🚀 Publicar (GitHub Pages)</button>
+          <button class="btn" id="copyLinkBtn">🔗 Copiar link</button>
+        </div>
+
+        <div class="statusLine" id="genStatus">Status: aguardando…</div>
+
+        <div class="card inner">
+          <h3>Link do app</h3>
+          <div class="muted small">Quando publicar, o link aparece aqui.</div>
+          <a id="publishedLink" href="#" target="_blank" rel="noreferrer">—</a>
+        </div>
+
+        <details class="card inner">
+          <summary>Console / Logs</summary>
+          <pre class="pre" id="logs"></pre>
+        </details>
+      </div>
+    </section>
+
+    <!-- SETTINGS -->
+    <section class="panel hidden" id="tab-settings">
+      <h2>Settings</h2>
+      <p class="muted">Configurações do Factory (salvas localmente no seu dispositivo).</p>
+
+      <div class="grid2">
+        <label class="field">
+          <span>GitHub username</span>
+          <input id="ghUser" placeholder="ex: mateussantanna" />
+        </label>
+
+        <label class="field">
+          <span>GitHub Token (PAT)</span>
+          <input id="ghToken" placeholder="cola o token aqui" />
+          <span class="hint">Permissões: Contents (read/write). Para ativar Pages automático: Pages (read/write).</span>
+        </label>
+
+        <label class="field">
+          <span>Prefixo do repositório</span>
+          <input id="repoPrefix" value="rapp-" />
+          <span class="hint">Repo final vira: prefixo + id do app (ex: rapp-rquotas)</span>
+        </label>
+
+        <label class="field">
+          <span>Base URL do Pages</span>
+          <input id="pagesBase" placeholder="https://SEUUSER.github.io" />
+          <span class="hint">Normalmente: https://&lt;username&gt;.github.io</span>
+        </label>
+      </div>
+
+      <div class="row">
+        <button class="btn primary" id="saveSettingsBtn">Salvar Settings</button>
+        <button class="btn danger" id="resetFactoryBtn">Reset Factory (limpar local)</button>
+      </div>
+
+      <div class="card">
+        <h3>Como pegar o link</h3>
+        <p class="muted">Depois de publicar, o link fica no Generator. Se o link der 404 na primeira vez: repo → Settings → Pages → main / root.</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- libs -->
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-
-  <!-- App principal -->
-  <script type="module" src="./js/app.js"></script>
+  <script src="app.js"></script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => navigator.serviceWorker.register("./sw.js").catch(() => {}));
+    }
+  </script>
 </body>
 </html>
