--- a/app/index.html
+++ b/app/index.html
@@ -218,3 +218,10 @@
   </script>
 </body>
 </html>
+<hr>
+
+<h3>Teste OpenAI</h3>
+
+<button onclick="testOpenAIFromUI()">
+  🚀 Testar OpenAI
+</button>
