--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,24 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>RControl Factory</title>
+  <meta name="theme-color" content="#0b1220" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div id="root"></div>
+
+  <!-- Ordem importa -->
+  <script src="js/ai.js"></script>
+  <script src="js/templates.js"></script>
+  <script src="js/router.js"></script>
+  <script src="app.js"></script>
+</body>
+</html><!doctype html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RControl Factory</title>
   <meta name="theme-color" content="#0b1220" />
