--- a/app/index.html
+++ b/app/index.html
@@ -197,7 +197,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 
   <!-- Factory -->
-  <script src="app.js"></script>
+  <script src="app.js?v=3"></script>
 
   <script>
     if ("serviceWorker" in navigator) {
