--- a/app/index.html
+++ b/app/index.html
@@ -249,10 +249,14 @@
       window.addEventListener("load", () => navigator.serviceWorker.register("./sw.js").catch(() => {}));
     }
   </script>
-</body><!-- Ordem importa -->
-<script src="js/ai.js"></script>
-<script src="js/templates.js"></script>
-<script src="js/router.js"></script>
-<script src="js/admin.js"></script>
-<script src="app.js"></script>
+</body>  <!-- módulos (ordem importa) -->
+  <script src="./js/templates.js"></script>
+  <script src="./js/ai.js"></script>
+  <script src="./js/router.js"></script>
+  <script src="./js/admin.js"></script>
+
+  <!-- app principal por último -->
+  <script src="./app.js"></script>
+</body>
+</html>
 </html>
